fixed visibility of filtering dropdown

--- a/frontend/src/modules/FilterBar/FilterBar.module.css
+++ b/frontend/src/modules/FilterBar/FilterBar.module.css
@@ -181,5 +181,6 @@
 }
 
 .dropdown-open {
+  z-index: 10;
   display: block;
 }
